[gd_scene load_steps=12 format=2]

[ext_resource path="res://media/player_vasp.png" type="Texture" id=1]
[ext_resource path="res://entities/amigo.gd" type="Script" id=2]
[ext_resource path="res://entities/Audio.gd" type="Script" id=3]
[ext_resource path="res://media/barrelp.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "beinghelped"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 81, 42 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:helptrigger")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ -1, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "JUMPa"
}, {
"args": [  ],
"method": "JUMPa"
}, {
"args": [  ],
"method": "JUMPa"
}, {
"args": [  ],
"method": "TINGa"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:barrelpvar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 100, 88, 76, 64, 52, 40, 28, 16, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Col2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 110, 111, 113, 115, 116, 117, 118, 119 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SAFEDIE"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Audio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FRIENDIEs"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 29 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walkgun"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 42 )

[node name="amigo" type="KinematicBody2D" groups=[
"amigo",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
helptrigger = -1
barrelpvar = 100

[node name="AniPlay" type="AnimationPlayer" parent="."]
anims/beinghelped = SubResource( 1 )
anims/die = SubResource( 2 )
anims/helpme = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )
anims/walkgun = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 10
vframes = 12
frame = 7

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 0, 23 )
scale = Vector2( 1, 0.5 )
z_index = -1
texture = ExtResource( 1 )
hframes = 10
vframes = 12

[node name="TexProg" type="TextureProgress" parent="."]
margin_left = -31.8558
margin_top = -49.3507
margin_right = 32.1442
margin_bottom = -9.35065
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 6
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
disabled = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
mix_target = 2
script = ExtResource( 3 )
